--- a/package.json
+++ b/package.json
@@ -1,11 +1,40 @@
 {
   "name": "react-signals-form",
   "version": "1.0.0",
-  "main": "index.js",
+  "homepage": "./",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "vite --port 3333",
+    "build": "vite build",
+    "tsc": "tsc --noEmit",
+    "tsc:w": "tsc --watch --noEmit",
+    "test": "vitest run --coverage",
+    "test:w": "vitest"
   },
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "author": "Miika Henttonen",
+  "license": "MIT",
+  "description": "",
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router": "^6.23.1",
+    "react-router-dom": "^6.23.1"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/node": "^20.12.12",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react-swc": "^3.6.0",
+    "@vitest/coverage-v8": "^1.6.0",
+    "eslint": "8.50.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "jsdom": "^24.0.0",
+    "prettier": "^3.2.5",
+    "vite": "^5.2.11",
+    "vitest": "^1.6.0",
+    "vitest-dom": "^0.1.1"
+  }
 }
